# minc-toolkit-testsuite

./: CMakeLists.txt  README.txt  run_tests.sh.in
icbm_data/: reference_nl_00200_V1.txt  reference_nl_00201_V1.txt
