project(minc-toolkit-testsuite)

cmake_minimum_required(VERSION 2.6)

SET(MINC_TOOLKIT_TESTSUITE_PACKAGE_VERSION_MAJOR 0)
SET(MINC_TOOLKIT_TESTSUITE_PACKAGE_VERSION_MINOR 1)
SET(MINC_TOOLKIT_TESTSUITE_PACKAGE_VERSION_PATCH 1)
SET(MINC_TOOLKIT_TESTSUITE_RELEASE_DATE "20120422")

SET(MINC_TOOLKIT_TESTSUITE_VERSION_FULL "${MINC_TOOLKIT_TESTSUITE_PACKAGE_VERSION_MAJOR}.${MINC_TOOLKIT_TESTSUITE_PACKAGE_VERSION_MINOR}.${MINC_TOOLKIT_TESTSUITE_PACKAGE_VERSION_PATCH}-${MINC_TOOLKIT_TESTSUITE_RELEASE_DATE}")

SET(CPACK_PACKAGE_NAME "minc-toolkit-testsuite")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "minc-toolkit testsuite")
SET(CPACK_PACKAGE_VENDOR "Brain Imaging Center, Montreal Neurological Institute, McGill University")
SET(CPACK_PACKAGE_VERSION_MAJOR ${MINC_TOOLKIT_TESTSUITE_PACKAGE_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${MINC_TOOLKIT_TESTSUITE_PACKAGE_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${MINC_TOOLKIT_TESTSUITE_PACKAGE_VERSION_PATCH})
SET(CPACK_PACKAGE_CONTACT "Vladimir Fonov <vladmir.fonov@gmail.com>")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "minc-toolkit-testsuite-${MINC_TOOLKIT_TESTSUITE_VERSION_FULL}")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/README.txt")
SET(CPACK_RESOURCE_FILE_LICENSE    "${CMAKE_SOURCE_DIR}/COPYING.txt")
SET(CPACK_PACKAGE_FILE_NAME        "minc-toolkit-testsuite-${MINC_TOOLKIT_TESTSUITE_VERSION_FULL}")
SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "all")

# register local modules
#SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_SOURCE_DIR}/cmake-modules")
#INCLUDE(DownloadTemplate)

# default install directories
SET(CPACK_SET_DESTDIR    ON)
SET(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})

SET(MINC_TOOLKIT_PREFIX "${CMAKE_INSTALL_PREFIX}")
SET(TESTSUITE_LIBRARY_PREFIX "${CMAKE_INSTALL_PREFIX}/share/testsuite")


INSTALL(DIRECTORY icbm_data  DESTINATION share/testsuit)

# TODO: add testing data for Lego phantom and ADNI phantom

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/run_tests.sh.in  ${CMAKE_CURRENT_BINARY_DIR}/run_tests.sh @ONLY)

INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/run_tests.sh DESTINATION .)

# according to http://www.cmake.org/pipermail/cmake/2011-November/047137.html it's better to put this in the end
INCLUDE(CPack)
